// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiGlobalToastList is rendered 1`] = `
<div
  aria-label="aria-label"
  aria-live="polite"
  class="euiGlobalToastList testClass1 testClass2 css-q9rn2p-euiGlobalToastList-right"
  data-test-subj="test subject string"
  role="region"
/>
`;

exports[`EuiGlobalToastList props side can be changed to left 1`] = `
<div
  aria-live="polite"
  class="euiGlobalToastList css-1wd4kwu-euiGlobalToastList-left"
  role="region"
>
  <div
    class="euiToast euiGlobalToastListItem css-7s3ook-euiToast-success-euiGlobalToastListItem"
    data-test-subj="a"
    id="a"
  >
    <p
      class="css-hus3oj-euiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="css-pc95kc-euiToastHeader-withBody"
      data-test-subj="euiToastHeader"
    >
      <span
        aria-hidden="true"
        class="css-mmgke1-euiToastHeader__icon"
        data-euiicon-type="check"
      />
      <span
        class="css-1slhb2e-euiToastHeader__title"
        data-test-subj="euiToastHeader__title"
      >
        A
      </span>
    </div>
    <button
      aria-label="Dismiss toast"
      class="euiButtonIcon euiButtonIcon--xSmall css-1x5pxt3-euiButtonIcon-empty-text-hoverStyles-euiToast__closeButton"
      data-test-subj="toastCloseButton"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="cross"
      />
    </button>
    <div
      class="euiText css-s3yl1j-euiText-s-euiToastBody"
      data-test-subj="euiToastBody"
    >
      a
    </div>
  </div>
  <div
    class="euiToast euiGlobalToastListItem css-1v70vbg-euiToast-danger-euiGlobalToastListItem"
    data-test-subj="b"
    id="b"
  >
    <p
      class="css-hus3oj-euiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="css-pc95kc-euiToastHeader-withBody"
      data-test-subj="euiToastHeader"
    >
      <span
        aria-hidden="true"
        class="css-mmgke1-euiToastHeader__icon"
        data-euiicon-type="alert"
      />
      <span
        class="css-1slhb2e-euiToastHeader__title"
        data-test-subj="euiToastHeader__title"
      >
        B
      </span>
    </div>
    <button
      aria-label="Dismiss toast"
      class="euiButtonIcon euiButtonIcon--xSmall css-1x5pxt3-euiButtonIcon-empty-text-hoverStyles-euiToast__closeButton"
      data-test-subj="toastCloseButton"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="cross"
      />
    </button>
    <div
      class="euiText css-s3yl1j-euiText-s-euiToastBody"
      data-test-subj="euiToastBody"
    >
      b
    </div>
  </div>
</div>
`;

exports[`EuiGlobalToastList props toasts is rendered 1`] = `
<div
  aria-live="polite"
  class="euiGlobalToastList css-q9rn2p-euiGlobalToastList-right"
  role="region"
>
  <div
    class="euiToast euiGlobalToastListItem css-7s3ook-euiToast-success-euiGlobalToastListItem"
    data-test-subj="a"
    id="a"
  >
    <p
      class="css-hus3oj-euiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="css-pc95kc-euiToastHeader-withBody"
      data-test-subj="euiToastHeader"
    >
      <span
        aria-hidden="true"
        class="css-mmgke1-euiToastHeader__icon"
        data-euiicon-type="check"
      />
      <span
        class="css-1slhb2e-euiToastHeader__title"
        data-test-subj="euiToastHeader__title"
      >
        A
      </span>
    </div>
    <button
      aria-label="Dismiss toast"
      class="euiButtonIcon euiButtonIcon--xSmall css-1x5pxt3-euiButtonIcon-empty-text-hoverStyles-euiToast__closeButton"
      data-test-subj="toastCloseButton"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="cross"
      />
    </button>
    <div
      class="euiText css-s3yl1j-euiText-s-euiToastBody"
      data-test-subj="euiToastBody"
    >
      a
    </div>
  </div>
  <div
    class="euiToast euiGlobalToastListItem css-1v70vbg-euiToast-danger-euiGlobalToastListItem"
    data-test-subj="b"
    id="b"
  >
    <p
      class="css-hus3oj-euiScreenReaderOnly"
    >
      A new notification appears
    </p>
    <div
      aria-label="Notification"
      class="css-pc95kc-euiToastHeader-withBody"
      data-test-subj="euiToastHeader"
    >
      <span
        aria-hidden="true"
        class="css-mmgke1-euiToastHeader__icon"
        data-euiicon-type="alert"
      />
      <span
        class="css-1slhb2e-euiToastHeader__title"
        data-test-subj="euiToastHeader__title"
      >
        B
      </span>
    </div>
    <button
      aria-label="Dismiss toast"
      class="euiButtonIcon euiButtonIcon--xSmall css-1x5pxt3-euiButtonIcon-empty-text-hoverStyles-euiToast__closeButton"
      data-test-subj="toastCloseButton"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="cross"
      />
    </button>
    <div
      class="euiText css-s3yl1j-euiText-s-euiToastBody"
      data-test-subj="euiToastBody"
    >
      b
    </div>
  </div>
</div>
`;
